# web-rpc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml
web-rpc/: Cargo.toml
web-rpc-macro/: Cargo.toml
web-rpc-macro/src/: lib.rs
web-rpc/src/: client.rs  codec.rs  interface.rs  lib.rs  port.rs  server.rs  service.rs
web-rpc/tests/: abort.rs  bidirectional.rs  blanket_impls.rs  borrowing.rs  cfg_methods.rs  inception.rs  mixed.rs  multiple.rs  post.rs  post_wrappers.rs  streaming.rs  transfer.rs  unidirectional.rs
worker-rpc/: Cargo.toml
worker-rpc-macro/: Cargo.toml
worker-rpc-macro/src/: lib.rs
worker-rpc/src/: client.rs  lib.rs  server.rs
worker-rpc/tests/: abort.rs  bidirectional.rs  blanket_impls.rs  inception.rs  multiple.rs  post.rs  unidirectional.rs
