[workspace]
members = ["web-rpc", "web-rpc-macro"]
resolver = "2"

[workspace.package]
version = "0.0.3"
edition = "2021"
authors = ["Michael Allwright <contact@allwright.io>"]
description = "Bi-directional RPC for the Web"
repository = "https://github.com/allsey87/web-rpc"
homepage = "https://github.com/allsey87/web-rpc"
readme = "README.md"
license = "MIT"
keywords = ["worker", "channel", "window", "javascript", "rpc"]
categories = ["web-programming", "wasm"]
