[package]
name = "web-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
web-rpc-macro = { path = "../web-rpc-macro", version = "0.0.2" }
bincode = "1.3.3"
futures-channel = "0.3.30"
futures-core = "0.3.30"
futures-util = { version = "0.3.30", features = ["channel"] }
gloo-events = "0.2.0"
gloo-timers =  { version = "0.3", features = ["futures"] }
js-sys = "0.3.66"
pin-utils = { version = "0.1.0" }
serde = { version = "1.0.193", features = ["derive"] }
wasm-bindgen-futures = "0.4.39"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["Worker", "DedicatedWorkerGlobalScope", "MessagePort", "EventTarget", "MessageEvent"] }

[dev-dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen-test = "0.3.39"
web-sys = { version = "0.3.66", features = ["MessagePort", "MessageChannel"] }
