[package]
name = "worker-rpc-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = { version = "1.0" }
proc-macro2 = "1.0"
