[package]
name = "worker-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
worker-rpc-macro = { path = "../worker-rpc-macro" }
bincode = "1.3.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.87"
gloo-events = "0.2.0"
web-sys = { version = "0.3", features = ["Worker", "DedicatedWorkerGlobalScope", "MessagePort", "EventTarget", "MessageEvent"] }
serde = { version = "1.0.193", features = ["derive"] }
js-sys = "0.3.64"
futures-channel = "0.3.30"
futures-core = "0.3.30"
futures-util = { version = "0.3.30", features = ["channel"] }

[dev-dependencies]
#console_error_panic_hook = "0.1.7"
wasm-bindgen-test = "0.3.0"
web-sys = { version = "0.3", features = ["MessagePort", "MessageChannel"] }