[package]
name = "worker-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
worker-rpc-macro = { path = "../worker-rpc-macro", version = "0.0.1" }
bincode = "1.3.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.87"
gloo-events = "0.2.0"
web-sys = { version = "0.3", features = ["Worker", "DedicatedWorkerGlobalScope", "MessagePort", "EventTarget", "MessageEvent"] }
serde = { version = "1.0.193", features = ["derive"] }
js-sys = "0.3.64"
futures-channel = "0.3.30"
futures-core = "0.3.30"
futures-util = { version = "0.3.30", features = ["channel"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
web-sys = { version = "0.3", features = ["MessagePort", "MessageChannel"] }